# wayirice

./: .gitignore  LICENSE.md  Makefile  README.md
core/: CMakeLists.txt
core/engine/: CMakeLists.txt
core/engine/src/: main.cpp
core/wl_ui_init/: CMakeLists.txt
core/wl_ui_init/include/: wl_ui_init.h
core/wl_ui_init/src/: app.c  app.h  egl.c  egl.h  lib.c  lib.h  listeners.c  listeners.h  macroses.c  macroses.h  surface.c  surface.h  types.h  wayland.c  wayland.h
core/wl_ui_init/test/: main.c
